--- a/1.html
+++ b/1.html
@@ -12,20 +12,44 @@
 
    gtag('config', 'UA-175915935-1');
  </script>
-
+<style>
+a {
+  color:black;
+  text-decoration: none;
+h1 {
+font-size: 60px;
+text-align:center;
+border-bottom : 1px solid black;
+margin:0;
+padding:20px;
+}
+ol{
+  border-right:1px solid black;
+  width:100px;
+  margin:0;
+  padding:20px;
+#grid{
+  display:grid;
+  grid-template-columns: 150px 1fr;
+}
+ }
+</style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
  <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
+  <li><a href="1.html" >HTML</a></li>
+  <li><a href="2.html" >CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
  </ol>
+<div>
 <h2>HTML</h2>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 <p><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.<img src="coding.jpg" width="100%"></p>
 <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
-
+</div>
+</div>
 </body>
 </html>
