--- a/2.html
+++ b/2.html
@@ -3,6 +3,7 @@
 <head>
  <title>WEB1 - CSS</title>
  <meta charset="utf-8">
+ <link rel="stylesheet" href="style.css">
  <!-- Global site tag (gtag.js) - Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175915935-1"></script>
  <script>
@@ -12,46 +13,7 @@
 
    gtag('config', 'UA-175915935-1');
  </script>
-<style>
 
- a {
-   color:blue;
- }
- #grid {
-   display:grid;
-   grid-template-columns: 150px 1fr;
- }
- #grid ol{
-   padding-left:33px;
- }
-#grid #article{
-  padding-left:25px;
-}
-h1 {
-font-size: 60px;
-text-align:center;
-border-bottom : 1px solid black;
-margin:0;
-padding:20px;
-}
-ol{
-  border-right:1px solid black;
-  width:100px;
-  margin:0;
-  padding:20px;
-}
-  @media(max-width:800px) {
-    #grid{
-      display:block;
-    }
-    ol{
-      border-right:none;
-    }
-    h1{
-      border-bottom:none;
-    }
-  }
-</style>
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
