--- a/mediaquery.html
+++ b/mediaquery.html
@@ -4,19 +4,19 @@
 <meta charset="utf-8">
 <title></title>
 <style>
-  div{
+  #grid{
     border:10px solid green;
     font-size:60px;
   }
   @media (min-width:800) {
-    div{
+    #grid{
       display:none;
     }
   }
   </style>
 </head>
 <body>
-<div>
+<div id="grid">
    Responsive
    </div>
   </body>
