--- a/1.html
+++ b/1.html
@@ -3,6 +3,7 @@
 <head>
  <title>WEB1 - HTML</title>
  <meta charset="utf-8">
+ <link rel="stylesheet" href="style.css">
  <!-- Global site tag (gtag.js) - Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175915935-1"></script>
  <script>
@@ -12,28 +13,7 @@
 
    gtag('config', 'UA-175915935-1');
  </script>
-<style>
-a {
-  color:black;
-  text-decoration: none;
-h1 {
-font-size: 60px;
-text-align:center;
-border-bottom : 1px solid black;
-margin:0;
-padding:20px;
-}
-ol{
-  border-right:1px solid black;
-  width:100px;
-  margin:0;
-  padding:20px;
-#grid{
-  display:grid;
-  grid-template-columns: 150px 1fr;
-}
- }
-</style>
+
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -43,7 +23,7 @@ ol{
   <li><a href="2.html" >CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
  </ol>
-<div>
+<div id ="article">
 <h2>HTML</h2>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
