--- a/mediaquery.html
+++ b/mediaquery.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8">
 <title></title>
 <style>
-  #grid{
+  div {
     border:10px solid green;
     font-size:60px;
   }
-  @media (min-width:800) {
-    #grid{
+  @media (min-width:800px) {
+    div {
       display:none;
     }
   }
