--- a/3.html
+++ b/3.html
@@ -16,14 +16,7 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type = "button" value ="night" onclick="
-  document.querySelector('body').style.backgroundColor='black';
-  document.querySelector('body').style.color='white';
-  ">
-  <input type = "button" value ="day" onclick="
-  document.querySelector('body').style.backgroundColor='white';
-  document.querySelector('body').style.color='black';
-  ">
+
 <div id="grid">
  <ol>
   <li><a href="1.html">HTML</a></li>
@@ -36,6 +29,19 @@
 
 Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.[8] JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior,[9] and all major web browsers have a dedicated JavaScript engine to execute it.
 </p>
+<input type ="button" value="night" onclick="
+var target = document.querySelector('body');
+if(this.value === 'night'){
+target.style.backgroundColor='black';
+target.style.color='white';
+this.value = 'day';
+} else {
+target.style.backgroundColor='white';
+target.style.color='black';
+target.style.backgroundColor='white';
+this.value='night';
+}
+">
 </div>
 <p>
   <div id="disqus_thread"></div>
