--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type = "button" value ="night" onclick="
-  document.querySelector('body').style.backgroundColor='black';
-  document.querySelector('body').style.color='white';
-  ">
-  <input type = "button" value ="day" onclick="
-  document.querySelector('body').style.backgroundColor='white';
-  document.querySelector('body').style.color='black';
-  ">
 <div id="grid">
  <ol>
   <li><a href="1.html">HTML</a></li>
@@ -34,6 +26,19 @@
 <h2>WEB</h2>
 <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server. The World Wide Web is not synonymous with the Internet, which pre-existed the Web in some form by over two decades and upon whose technologies the Web is built.
 </p>
+<input type ="button" value="night" onclick="
+var target = document.querySelector('body');
+if(this.value === 'night'){
+target.style.backgroundColor='black';
+target.style.color='white';
+this.value = 'day';
+} else {
+target.style.backgroundColor='white';
+target.style.color='black';
+target.style.backgroundColor='white';
+this.value='night';
+}
+">
 </div>
 <p>
   <div id="disqus_thread"></div>
