--- a/3.html
+++ b/3.html
@@ -13,6 +13,8 @@
 
    gtag('config', 'UA-175915935-1');
  </script>
+ <script src = "colors.js">
+ </script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -30,17 +32,7 @@
 Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.[8] JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior,[9] and all major web browsers have a dedicated JavaScript engine to execute it.
 </p>
 <input type ="button" value="night" onclick="
-var target = document.querySelector('body');
-if(this.value === 'night'){
-target.style.backgroundColor='black';
-target.style.color='white';
-this.value = 'day';
-} else {
-target.style.backgroundColor='white';
-target.style.color='black';
-target.style.backgroundColor='white';
-this.value='night';
-}
+nightDayHandler(this);
 ">
 </div>
 <p>
