--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <title>WEB1 - Welcome</title>
  <meta charset="utf-8">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="style.css">
  <!-- Global site tag (gtag.js) - Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175915935-1"></script>
